--- a/CSS/stilo.css
+++ b/CSS/stilo.css
@@ -6,24 +6,24 @@
 }
 
 body{
-    background-color: #f7bbee;
+    background-color: #f5c391;
 }
 
 /* Forma de Fundo */
 .fundo {
-    background-color: #d109b3;
+    background-color: #5b1f00;
     width: 700px;
     height: 350px;
-    border: 3px solid rgb(0, 0, 0);
+    border: 3px solid rgb(255, 255, 255);
     padding: 30px;
     margin: 20px;
     border-radius: 10px;
     transition: 0.5s;
-    display: inline-block;
+    display: block;
 } 
 
 .fundo:hover{
-    background-color: #ff00d9;
+    background-color: #874421;
 }
 
 .perfil {
@@ -31,15 +31,14 @@ body{
     width: 250px;
     height: 300px;
     margin: 5px;
-    color: #fff;
-    display: block;
+    color: #f4a460;
+    display: line;
 }
 
 .info {
-    margin: 5px;
-    color: #fff;
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 10px;
-    padding: 10px;
-    display: block;
+    display: line;
+}
+
+.lista {
+    list-style: none;
 }
