--- a/CSS/stilo.css
+++ b/CSS/stilo.css
@@ -6,12 +6,12 @@
 }
 
 body{
-    background-color: #f5c391;
+    background-color: #0c0000;
 }
 
 /* Forma de Fundo */
 .container {
-    background-color: #5b1f00;
+    background-color: #260000;
     width: 700px;
     height: 350px;
     border: 3px solid rgb(255, 255, 255);
@@ -25,7 +25,7 @@ body{
 } 
 
 .container:hover{
-    background-color: #874421;
+    background-color: #4b0101;
 }
 
 .perfil {
@@ -33,7 +33,7 @@ body{
     width: 250px;
     height: 285px;
     padding: 5px;
-    color: #f4a460;
+    color: #DBA53C;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -46,6 +46,7 @@ body{
     border-radius: 500px;
     background-position: center;
     background-size: cover;
+    border: 2px solid #fff;
 }
 
 #img {
@@ -59,7 +60,7 @@ body{
 }
 
 .info {
-    color: #fff;
+    color: #EDE383;
     text-align: left;
     height: 260px;
     display: flex;
